set(COMPONENT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(COMPONENT_SRC_DIR ${COMPONENT_DIR}/src)
set(COMPONENT_INCLUDE_DIRS ${COMPONENT_DIR}/include)
set(COMPONENT_PRIVATE_INCLUDE_DIRS ${COMPONENT_SRC_DIR})

if(POLICY CMP0144)
    cmake_policy(SET CMP0144 NEW)
endif()

file(GLOB_RECURSE COMPONENT_SRCS_C ${COMPONENT_SRC_DIR}/*.c)
file(GLOB_RECURSE COMPONENT_SRCS_CPP ${COMPONENT_SRC_DIR}/*.cpp)

if(NOT TARGET brookesia::lib_utils)
    add_subdirectory(
        ${COMPONENT_DIR}/../../utils/brookesia_lib_utils
        ${CMAKE_BINARY_DIR}/brookesia_lib_utils
    )
endif()
if(NOT TARGET brookesia::hal_interface)
    add_subdirectory(
        ${COMPONENT_DIR}/../brookesia_hal_interface
        ${CMAKE_BINARY_DIR}/brookesia_hal_interface
    )
endif()

find_package(Boost REQUIRED COMPONENTS system)
find_package(OpenSSL REQUIRED)
find_package(PkgConfig QUIET)

set(BROOKESIA_HAL_LINUX_MEDIA_BACKEND "auto" CACHE STRING "HAL Linux media backend: auto, stub, or ffmpeg_portaudio")
set_property(CACHE BROOKESIA_HAL_LINUX_MEDIA_BACKEND PROPERTY STRINGS auto stub ffmpeg_portaudio)
if(NOT BROOKESIA_HAL_LINUX_MEDIA_BACKEND MATCHES "^(auto|stub|ffmpeg_portaudio)$")
    message(FATAL_ERROR "Invalid BROOKESIA_HAL_LINUX_MEDIA_BACKEND: ${BROOKESIA_HAL_LINUX_MEDIA_BACKEND}")
endif()
set(BROOKESIA_HAL_LINUX_VIDEO_BACKEND "auto" CACHE STRING "HAL Linux video backend: auto, stub, or ffmpeg_v4l2")
set_property(CACHE BROOKESIA_HAL_LINUX_VIDEO_BACKEND PROPERTY STRINGS auto stub ffmpeg_v4l2)
if(NOT BROOKESIA_HAL_LINUX_VIDEO_BACKEND MATCHES "^(auto|stub|ffmpeg_v4l2)$")
    message(FATAL_ERROR "Invalid BROOKESIA_HAL_LINUX_VIDEO_BACKEND: ${BROOKESIA_HAL_LINUX_VIDEO_BACKEND}")
endif()
set(BROOKESIA_HAL_LINUX_WIFI_BACKEND "stub" CACHE STRING "HAL Linux Wi-Fi backend: auto, stub, or networkmanager")
set_property(CACHE BROOKESIA_HAL_LINUX_WIFI_BACKEND PROPERTY STRINGS auto stub networkmanager)
if(NOT BROOKESIA_HAL_LINUX_WIFI_BACKEND MATCHES "^(auto|stub|networkmanager)$")
    message(FATAL_ERROR "Invalid BROOKESIA_HAL_LINUX_WIFI_BACKEND: ${BROOKESIA_HAL_LINUX_WIFI_BACKEND}")
endif()
set(BROOKESIA_HAL_LINUX_DISPLAY_BACKEND "auto" CACHE STRING "HAL Linux display backend: auto, stub, or sdl2")
set_property(CACHE BROOKESIA_HAL_LINUX_DISPLAY_BACKEND PROPERTY STRINGS auto stub sdl2)
if(NOT BROOKESIA_HAL_LINUX_DISPLAY_BACKEND MATCHES "^(auto|stub|sdl2)$")
    message(FATAL_ERROR "Invalid BROOKESIA_HAL_LINUX_DISPLAY_BACKEND: ${BROOKESIA_HAL_LINUX_DISPLAY_BACKEND}")
endif()
set(BROOKESIA_HAL_LINUX_POWER_BACKEND "auto" CACHE STRING "HAL Linux power backend: auto, stub, or upower")
set_property(CACHE BROOKESIA_HAL_LINUX_POWER_BACKEND PROPERTY STRINGS auto stub upower)
if(NOT BROOKESIA_HAL_LINUX_POWER_BACKEND MATCHES "^(auto|stub|upower)$")
    message(FATAL_ERROR "Invalid BROOKESIA_HAL_LINUX_POWER_BACKEND: ${BROOKESIA_HAL_LINUX_POWER_BACKEND}")
endif()
set(
    BROOKESIA_HAL_LINUX_NETWORK_HTTP_CLIENT_READ_THROTTLE_BYTES_PER_SEC
    "102400"
    CACHE STRING
    "Linux HTTP client response body read throttle in bytes per second; 0 disables throttling"
)
if(NOT BROOKESIA_HAL_LINUX_NETWORK_HTTP_CLIENT_READ_THROTTLE_BYTES_PER_SEC MATCHES "^[0-9]+$")
    message(
        FATAL_ERROR
        "Invalid BROOKESIA_HAL_LINUX_NETWORK_HTTP_CLIENT_READ_THROTTLE_BYTES_PER_SEC: "
        "${BROOKESIA_HAL_LINUX_NETWORK_HTTP_CLIENT_READ_THROTTLE_BYTES_PER_SEC}"
    )
endif()
string(
    CONCAT brookesia_hal_linux_http_client_read_throttle_definition
    "CONFIG_BROOKESIA_HAL_LINUX_NETWORK_HTTP_CLIENT_READ_THROTTLE_BYTES_PER_SEC="
    "(${BROOKESIA_HAL_LINUX_NETWORK_HTTP_CLIENT_READ_THROTTLE_BYTES_PER_SEC})"
)
set(
    BROOKESIA_HAL_LINUX_HTTP_CLIENT_COMPILE_DEFINITIONS
    "${brookesia_hal_linux_http_client_read_throttle_definition}"
)

set(BROOKESIA_HAL_LINUX_MEDIA_BACKEND_FFMPEG_PORTAUDIO_AVAILABLE FALSE)
if(NOT BROOKESIA_HAL_LINUX_MEDIA_BACKEND STREQUAL "stub")
    if(PkgConfig_FOUND)
        pkg_check_modules(BROOKESIA_HAL_LINUX_FFMPEG_PORTAUDIO QUIET
            libavformat
            libavcodec
            libavutil
            libswresample
            libswscale
            libavdevice
            portaudio-2.0
        )
        if(BROOKESIA_HAL_LINUX_FFMPEG_PORTAUDIO_FOUND)
            set(BROOKESIA_HAL_LINUX_MEDIA_BACKEND_FFMPEG_PORTAUDIO_AVAILABLE TRUE)
        endif()
    endif()
endif()

set(BROOKESIA_HAL_LINUX_VIDEO_BACKEND_FFMPEG_V4L2_AVAILABLE FALSE)
if(NOT BROOKESIA_HAL_LINUX_VIDEO_BACKEND STREQUAL "stub")
    if(PkgConfig_FOUND)
        pkg_check_modules(BROOKESIA_HAL_LINUX_FFMPEG_V4L2 QUIET
            libavformat
            libavcodec
            libavutil
            libswscale
            libavdevice
            libv4l2
        )
        if(BROOKESIA_HAL_LINUX_FFMPEG_V4L2_FOUND)
            set(BROOKESIA_HAL_LINUX_VIDEO_BACKEND_FFMPEG_V4L2_AVAILABLE TRUE)
        endif()
    endif()
endif()

set(BROOKESIA_HAL_LINUX_DISPLAY_BACKEND_SDL2_AVAILABLE FALSE)
set(BROOKESIA_HAL_LINUX_DISPLAY_BACKEND_SDL2_USE_TARGET FALSE)
if(NOT BROOKESIA_HAL_LINUX_DISPLAY_BACKEND STREQUAL "stub")
    if(TARGET SDL2::SDL2)
        set(BROOKESIA_HAL_LINUX_DISPLAY_BACKEND_SDL2_AVAILABLE TRUE)
        set(BROOKESIA_HAL_LINUX_DISPLAY_BACKEND_SDL2_USE_TARGET TRUE)
    elseif(PkgConfig_FOUND)
        pkg_check_modules(BROOKESIA_HAL_LINUX_SDL2 QUIET sdl2)
        if(BROOKESIA_HAL_LINUX_SDL2_FOUND)
            set(BROOKESIA_HAL_LINUX_DISPLAY_BACKEND_SDL2_AVAILABLE TRUE)
        endif()
    endif()
endif()

set(BROOKESIA_HAL_LINUX_POWER_BACKEND_UPOWER_AVAILABLE FALSE)
if(NOT BROOKESIA_HAL_LINUX_POWER_BACKEND STREQUAL "stub")
    if(PkgConfig_FOUND)
        pkg_check_modules(BROOKESIA_HAL_LINUX_UPOWER QUIET upower-glib)
        if(BROOKESIA_HAL_LINUX_UPOWER_FOUND)
            set(BROOKESIA_HAL_LINUX_POWER_BACKEND_UPOWER_AVAILABLE TRUE)
        endif()
    endif()
endif()

set(BROOKESIA_HAL_LINUX_WIFI_BACKEND_NETWORKMANAGER_AVAILABLE FALSE)
if(NOT BROOKESIA_HAL_LINUX_WIFI_BACKEND STREQUAL "stub")
    if(PkgConfig_FOUND)
        pkg_check_modules(BROOKESIA_HAL_LINUX_NETWORKMANAGER QUIET libnm)
        if(BROOKESIA_HAL_LINUX_NETWORKMANAGER_FOUND)
            set(BROOKESIA_HAL_LINUX_WIFI_BACKEND_NETWORKMANAGER_AVAILABLE TRUE)
        endif()
    endif()
endif()

if((BROOKESIA_HAL_LINUX_MEDIA_BACKEND STREQUAL "ffmpeg_portaudio") AND
    NOT BROOKESIA_HAL_LINUX_MEDIA_BACKEND_FFMPEG_PORTAUDIO_AVAILABLE)
    message(WARNING "BROOKESIA_HAL_LINUX_MEDIA_BACKEND=ffmpeg_portaudio requested, but FFmpeg/PortAudio "
        "development packages were not found. Falling back to audio stub backend.")
endif()
if((BROOKESIA_HAL_LINUX_VIDEO_BACKEND STREQUAL "ffmpeg_v4l2") AND
    NOT BROOKESIA_HAL_LINUX_VIDEO_BACKEND_FFMPEG_V4L2_AVAILABLE)
    message(WARNING "BROOKESIA_HAL_LINUX_VIDEO_BACKEND=ffmpeg_v4l2 requested, but FFmpeg/V4L2 development "
        "packages were not found. Falling back to video stub backend.")
endif()
if((BROOKESIA_HAL_LINUX_DISPLAY_BACKEND STREQUAL "sdl2") AND
    NOT BROOKESIA_HAL_LINUX_DISPLAY_BACKEND_SDL2_AVAILABLE)
    message(WARNING "BROOKESIA_HAL_LINUX_DISPLAY_BACKEND=sdl2 requested, but SDL2 development package was not "
        "found. Falling back to display stub backend.")
endif()
if((BROOKESIA_HAL_LINUX_POWER_BACKEND STREQUAL "upower") AND
    NOT BROOKESIA_HAL_LINUX_POWER_BACKEND_UPOWER_AVAILABLE)
    message(WARNING "BROOKESIA_HAL_LINUX_POWER_BACKEND=upower requested, but UPower development package was not "
        "found. Falling back to power stub backend.")
endif()
if((BROOKESIA_HAL_LINUX_WIFI_BACKEND STREQUAL "networkmanager") AND
    NOT BROOKESIA_HAL_LINUX_WIFI_BACKEND_NETWORKMANAGER_AVAILABLE)
    message(WARNING "BROOKESIA_HAL_LINUX_WIFI_BACKEND=networkmanager requested, but libnm development package was "
        "not found. Falling back to Wi-Fi stub backend.")
endif()

set(BROOKESIA_HAL_LINUX_MEDIA_BACKEND_FFMPEG_PORTAUDIO_ENABLED FALSE)
if((BROOKESIA_HAL_LINUX_MEDIA_BACKEND STREQUAL "ffmpeg_portaudio" OR
    BROOKESIA_HAL_LINUX_MEDIA_BACKEND STREQUAL "auto") AND
    BROOKESIA_HAL_LINUX_MEDIA_BACKEND_FFMPEG_PORTAUDIO_AVAILABLE)
    set(BROOKESIA_HAL_LINUX_MEDIA_BACKEND_FFMPEG_PORTAUDIO_ENABLED TRUE)
endif()
set(BROOKESIA_HAL_LINUX_VIDEO_BACKEND_FFMPEG_V4L2_ENABLED FALSE)
if((BROOKESIA_HAL_LINUX_VIDEO_BACKEND STREQUAL "ffmpeg_v4l2" OR
    BROOKESIA_HAL_LINUX_VIDEO_BACKEND STREQUAL "auto") AND
    BROOKESIA_HAL_LINUX_VIDEO_BACKEND_FFMPEG_V4L2_AVAILABLE)
    set(BROOKESIA_HAL_LINUX_VIDEO_BACKEND_FFMPEG_V4L2_ENABLED TRUE)
endif()
set(BROOKESIA_HAL_LINUX_DISPLAY_BACKEND_SDL2_ENABLED FALSE)
if((BROOKESIA_HAL_LINUX_DISPLAY_BACKEND STREQUAL "sdl2" OR
    BROOKESIA_HAL_LINUX_DISPLAY_BACKEND STREQUAL "auto") AND
    BROOKESIA_HAL_LINUX_DISPLAY_BACKEND_SDL2_AVAILABLE)
    set(BROOKESIA_HAL_LINUX_DISPLAY_BACKEND_SDL2_ENABLED TRUE)
endif()
set(BROOKESIA_HAL_LINUX_POWER_BACKEND_UPOWER_ENABLED FALSE)
if((BROOKESIA_HAL_LINUX_POWER_BACKEND STREQUAL "upower" OR
    BROOKESIA_HAL_LINUX_POWER_BACKEND STREQUAL "auto") AND
    BROOKESIA_HAL_LINUX_POWER_BACKEND_UPOWER_AVAILABLE)
    set(BROOKESIA_HAL_LINUX_POWER_BACKEND_UPOWER_ENABLED TRUE)
endif()
set(BROOKESIA_HAL_LINUX_WIFI_BACKEND_NETWORKMANAGER_ENABLED FALSE)
if((BROOKESIA_HAL_LINUX_WIFI_BACKEND STREQUAL "networkmanager" OR
    BROOKESIA_HAL_LINUX_WIFI_BACKEND STREQUAL "auto") AND
    BROOKESIA_HAL_LINUX_WIFI_BACKEND_NETWORKMANAGER_AVAILABLE)
    set(BROOKESIA_HAL_LINUX_WIFI_BACKEND_NETWORKMANAGER_ENABLED TRUE)
endif()

if(BROOKESIA_HAL_LINUX_MEDIA_BACKEND_FFMPEG_PORTAUDIO_ENABLED)
    set(BROOKESIA_HAL_LINUX_MEDIA_BACKEND_COMPILE_DEFINITIONS
        BROOKESIA_HAL_LINUX_MEDIA_BACKEND_STUB=0
        BROOKESIA_HAL_LINUX_MEDIA_BACKEND_FFMPEG_PORTAUDIO_AVAILABLE=1
        CONFIG_BROOKESIA_HAL_LINUX_MEDIA_BACKEND_FFMPEG_PORTAUDIO=1
    )
else()
    set(BROOKESIA_HAL_LINUX_MEDIA_BACKEND_COMPILE_DEFINITIONS
        BROOKESIA_HAL_LINUX_MEDIA_BACKEND_STUB=1
        BROOKESIA_HAL_LINUX_MEDIA_BACKEND_FFMPEG_PORTAUDIO_AVAILABLE=0
        CONFIG_BROOKESIA_HAL_LINUX_MEDIA_BACKEND_FFMPEG_PORTAUDIO=0
    )
endif()

if(BROOKESIA_HAL_LINUX_VIDEO_BACKEND_FFMPEG_V4L2_ENABLED)
    set(BROOKESIA_HAL_LINUX_VIDEO_BACKEND_COMPILE_DEFINITIONS
        BROOKESIA_HAL_LINUX_VIDEO_BACKEND_STUB=0
        BROOKESIA_HAL_LINUX_VIDEO_BACKEND_FFMPEG_V4L2_AVAILABLE=1
        CONFIG_BROOKESIA_HAL_LINUX_VIDEO_BACKEND_FFMPEG_V4L2=1
    )
else()
    set(BROOKESIA_HAL_LINUX_VIDEO_BACKEND_COMPILE_DEFINITIONS
        BROOKESIA_HAL_LINUX_VIDEO_BACKEND_STUB=1
        BROOKESIA_HAL_LINUX_VIDEO_BACKEND_FFMPEG_V4L2_AVAILABLE=0
        CONFIG_BROOKESIA_HAL_LINUX_VIDEO_BACKEND_FFMPEG_V4L2=0
    )
endif()

if(BROOKESIA_HAL_LINUX_DISPLAY_BACKEND_SDL2_ENABLED)
    set(BROOKESIA_HAL_LINUX_DISPLAY_BACKEND_COMPILE_DEFINITIONS
        BROOKESIA_HAL_LINUX_DISPLAY_BACKEND_STUB=0
        BROOKESIA_HAL_LINUX_DISPLAY_BACKEND_SDL2_AVAILABLE=1
        CONFIG_BROOKESIA_HAL_LINUX_DISPLAY_BACKEND_SDL2=1
    )
else()
    set(BROOKESIA_HAL_LINUX_DISPLAY_BACKEND_COMPILE_DEFINITIONS
        BROOKESIA_HAL_LINUX_DISPLAY_BACKEND_STUB=1
        BROOKESIA_HAL_LINUX_DISPLAY_BACKEND_SDL2_AVAILABLE=0
        CONFIG_BROOKESIA_HAL_LINUX_DISPLAY_BACKEND_SDL2=0
    )
endif()

if(BROOKESIA_HAL_LINUX_POWER_BACKEND_UPOWER_ENABLED)
    set(BROOKESIA_HAL_LINUX_POWER_BACKEND_COMPILE_DEFINITIONS
        BROOKESIA_HAL_LINUX_POWER_BACKEND_STUB=0
        BROOKESIA_HAL_LINUX_POWER_BACKEND_UPOWER_AVAILABLE=1
        CONFIG_BROOKESIA_HAL_LINUX_POWER_BACKEND_UPOWER=1
    )
else()
    set(BROOKESIA_HAL_LINUX_POWER_BACKEND_COMPILE_DEFINITIONS
        BROOKESIA_HAL_LINUX_POWER_BACKEND_STUB=1
        BROOKESIA_HAL_LINUX_POWER_BACKEND_UPOWER_AVAILABLE=0
        CONFIG_BROOKESIA_HAL_LINUX_POWER_BACKEND_UPOWER=0
    )
endif()

if(BROOKESIA_HAL_LINUX_WIFI_BACKEND_NETWORKMANAGER_ENABLED)
    set(BROOKESIA_HAL_LINUX_WIFI_BACKEND_COMPILE_DEFINITIONS
        BROOKESIA_HAL_LINUX_WIFI_BACKEND_STUB=0
        BROOKESIA_HAL_LINUX_WIFI_BACKEND_NETWORKMANAGER_AVAILABLE=1
        CONFIG_BROOKESIA_HAL_LINUX_WIFI_BACKEND_NETWORKMANAGER=1
    )
else()
    set(BROOKESIA_HAL_LINUX_WIFI_BACKEND_COMPILE_DEFINITIONS
        BROOKESIA_HAL_LINUX_WIFI_BACKEND_STUB=1
        BROOKESIA_HAL_LINUX_WIFI_BACKEND_NETWORKMANAGER_AVAILABLE=0
        CONFIG_BROOKESIA_HAL_LINUX_WIFI_BACKEND_NETWORKMANAGER=0
    )
endif()

set(BROOKESIA_HAL_LINUX_BACKEND_COMPILE_DEFINITIONS
    ${BROOKESIA_HAL_LINUX_MEDIA_BACKEND_COMPILE_DEFINITIONS}
    ${BROOKESIA_HAL_LINUX_VIDEO_BACKEND_COMPILE_DEFINITIONS}
    ${BROOKESIA_HAL_LINUX_WIFI_BACKEND_COMPILE_DEFINITIONS}
    ${BROOKESIA_HAL_LINUX_DISPLAY_BACKEND_COMPILE_DEFINITIONS}
    ${BROOKESIA_HAL_LINUX_POWER_BACKEND_COMPILE_DEFINITIONS}
)

set(COMPONENT_LIB brookesia_hal_linux)
add_library(${COMPONENT_LIB} STATIC
    ${COMPONENT_SRCS_C}
    ${COMPONENT_SRCS_CPP}
)
target_compile_features(${COMPONENT_LIB} PUBLIC cxx_std_20)
target_include_directories(${COMPONENT_LIB}
    PUBLIC
        ${COMPONENT_INCLUDE_DIRS}
        ${Boost_INCLUDE_DIRS}
    PRIVATE
        ${COMPONENT_PRIVATE_INCLUDE_DIRS}
)
target_link_libraries(${COMPONENT_LIB}
    PUBLIC
        brookesia::hal_interface
        brookesia::lib_utils
        Boost::system
        OpenSSL::SSL
        OpenSSL::Crypto
)
if(BROOKESIA_HAL_LINUX_MEDIA_BACKEND_FFMPEG_PORTAUDIO_ENABLED)
    target_include_directories(${COMPONENT_LIB} PRIVATE ${BROOKESIA_HAL_LINUX_FFMPEG_PORTAUDIO_INCLUDE_DIRS})
    target_link_directories(${COMPONENT_LIB} PRIVATE ${BROOKESIA_HAL_LINUX_FFMPEG_PORTAUDIO_LIBRARY_DIRS})
    target_link_libraries(${COMPONENT_LIB} PRIVATE ${BROOKESIA_HAL_LINUX_FFMPEG_PORTAUDIO_LIBRARIES})
endif()
if(BROOKESIA_HAL_LINUX_VIDEO_BACKEND_FFMPEG_V4L2_ENABLED)
    target_include_directories(${COMPONENT_LIB} PRIVATE ${BROOKESIA_HAL_LINUX_FFMPEG_V4L2_INCLUDE_DIRS})
    target_link_directories(${COMPONENT_LIB} PRIVATE ${BROOKESIA_HAL_LINUX_FFMPEG_V4L2_LIBRARY_DIRS})
    target_link_libraries(${COMPONENT_LIB} PRIVATE ${BROOKESIA_HAL_LINUX_FFMPEG_V4L2_LIBRARIES})
endif()
if(BROOKESIA_HAL_LINUX_DISPLAY_BACKEND_SDL2_ENABLED)
    if(BROOKESIA_HAL_LINUX_DISPLAY_BACKEND_SDL2_USE_TARGET)
        target_link_libraries(${COMPONENT_LIB} PRIVATE SDL2::SDL2)
    else()
        target_include_directories(${COMPONENT_LIB} PRIVATE ${BROOKESIA_HAL_LINUX_SDL2_INCLUDE_DIRS})
        target_link_directories(${COMPONENT_LIB} PRIVATE ${BROOKESIA_HAL_LINUX_SDL2_LIBRARY_DIRS})
        target_link_libraries(${COMPONENT_LIB} PRIVATE ${BROOKESIA_HAL_LINUX_SDL2_LIBRARIES})
    endif()
endif()
if(BROOKESIA_HAL_LINUX_POWER_BACKEND_UPOWER_ENABLED)
    target_include_directories(${COMPONENT_LIB} PRIVATE ${BROOKESIA_HAL_LINUX_UPOWER_INCLUDE_DIRS})
    target_link_directories(${COMPONENT_LIB} PRIVATE ${BROOKESIA_HAL_LINUX_UPOWER_LIBRARY_DIRS})
    target_link_libraries(${COMPONENT_LIB} PRIVATE ${BROOKESIA_HAL_LINUX_UPOWER_LIBRARIES})
endif()
if(BROOKESIA_HAL_LINUX_WIFI_BACKEND_NETWORKMANAGER_ENABLED)
    target_include_directories(${COMPONENT_LIB} PRIVATE ${BROOKESIA_HAL_LINUX_NETWORKMANAGER_INCLUDE_DIRS})
    target_link_directories(${COMPONENT_LIB} PRIVATE ${BROOKESIA_HAL_LINUX_NETWORKMANAGER_LIBRARY_DIRS})
    target_link_libraries(${COMPONENT_LIB} PRIVATE ${BROOKESIA_HAL_LINUX_NETWORKMANAGER_LIBRARIES})
endif()

set(BROOKESIA_HAL_LINUX_SYSTEM_DEVICE_PLUGIN_SYMBOL system_linux_device_symbol)
set(BROOKESIA_HAL_LINUX_NETWORK_DEVICE_PLUGIN_SYMBOL network_linux_device_symbol)
set(BROOKESIA_HAL_LINUX_AUDIO_DEVICE_PLUGIN_SYMBOL audio_linux_device_symbol)
set(BROOKESIA_HAL_LINUX_VIDEO_DEVICE_PLUGIN_SYMBOL video_linux_device_symbol)
set(BROOKESIA_HAL_LINUX_DISPLAY_DEVICE_PLUGIN_SYMBOL display_linux_device_symbol)
set(BROOKESIA_HAL_LINUX_POWER_DEVICE_PLUGIN_SYMBOL power_linux_device_symbol)
set(BROOKESIA_HAL_LINUX_STORAGE_DEVICE_PLUGIN_SYMBOL storage_linux_device_symbol)
set(BROOKESIA_HAL_LINUX_WIFI_DEVICE_PLUGIN_SYMBOL wifi_linux_device_symbol)
target_compile_definitions(${COMPONENT_LIB} PRIVATE
    CONFIG_BROOKESIA_HAL_LINUX_ENABLE_SYSTEM_DEVICE=1
    CONFIG_BROOKESIA_HAL_LINUX_ENABLE_NETWORK_DEVICE=1
    CONFIG_BROOKESIA_HAL_LINUX_NETWORK_ENABLE_SNTP_CLIENT_IMPL=1
    CONFIG_BROOKESIA_HAL_LINUX_NETWORK_ENABLE_HTTP_CLIENT_IMPL=1
    CONFIG_BROOKESIA_HAL_LINUX_SYSTEM_ENABLE_OTA_UPDATER_IMPL=1
    CONFIG_BROOKESIA_HAL_LINUX_ENABLE_AUDIO_DEVICE=1
    CONFIG_BROOKESIA_HAL_LINUX_ENABLE_VIDEO_DEVICE=1
    CONFIG_BROOKESIA_HAL_LINUX_ENABLE_DISPLAY_DEVICE=1
    CONFIG_BROOKESIA_HAL_LINUX_ENABLE_POWER_DEVICE=1
    CONFIG_BROOKESIA_HAL_LINUX_ENABLE_WIFI_DEVICE=1
    CONFIG_BROOKESIA_HAL_LINUX_ENABLE_STORAGE_DEVICE=1
    BROOKESIA_HAL_LINUX_SYSTEM_DEVICE_PLUGIN_SYMBOL=${BROOKESIA_HAL_LINUX_SYSTEM_DEVICE_PLUGIN_SYMBOL}
    BROOKESIA_HAL_LINUX_NETWORK_DEVICE_PLUGIN_SYMBOL=${BROOKESIA_HAL_LINUX_NETWORK_DEVICE_PLUGIN_SYMBOL}
    BROOKESIA_HAL_LINUX_AUDIO_DEVICE_PLUGIN_SYMBOL=${BROOKESIA_HAL_LINUX_AUDIO_DEVICE_PLUGIN_SYMBOL}
    BROOKESIA_HAL_LINUX_VIDEO_DEVICE_PLUGIN_SYMBOL=${BROOKESIA_HAL_LINUX_VIDEO_DEVICE_PLUGIN_SYMBOL}
    BROOKESIA_HAL_LINUX_DISPLAY_DEVICE_PLUGIN_SYMBOL=${BROOKESIA_HAL_LINUX_DISPLAY_DEVICE_PLUGIN_SYMBOL}
    BROOKESIA_HAL_LINUX_POWER_DEVICE_PLUGIN_SYMBOL=${BROOKESIA_HAL_LINUX_POWER_DEVICE_PLUGIN_SYMBOL}
    BROOKESIA_HAL_LINUX_WIFI_DEVICE_PLUGIN_SYMBOL=${BROOKESIA_HAL_LINUX_WIFI_DEVICE_PLUGIN_SYMBOL}
    BROOKESIA_HAL_LINUX_STORAGE_DEVICE_PLUGIN_SYMBOL=${BROOKESIA_HAL_LINUX_STORAGE_DEVICE_PLUGIN_SYMBOL}
    ${BROOKESIA_HAL_LINUX_HTTP_CLIENT_COMPILE_DEFINITIONS}
    ${BROOKESIA_HAL_LINUX_BACKEND_COMPILE_DEFINITIONS}
)
target_link_libraries(${COMPONENT_LIB} PRIVATE "-u ${BROOKESIA_HAL_LINUX_SYSTEM_DEVICE_PLUGIN_SYMBOL}")
target_link_libraries(${COMPONENT_LIB} PRIVATE "-u ${BROOKESIA_HAL_LINUX_NETWORK_DEVICE_PLUGIN_SYMBOL}")
target_link_libraries(${COMPONENT_LIB} PRIVATE "-u ${BROOKESIA_HAL_LINUX_AUDIO_DEVICE_PLUGIN_SYMBOL}")
target_link_libraries(${COMPONENT_LIB} PRIVATE "-u ${BROOKESIA_HAL_LINUX_VIDEO_DEVICE_PLUGIN_SYMBOL}")
target_link_libraries(${COMPONENT_LIB} PRIVATE "-u ${BROOKESIA_HAL_LINUX_DISPLAY_DEVICE_PLUGIN_SYMBOL}")
target_link_libraries(${COMPONENT_LIB} PRIVATE "-u ${BROOKESIA_HAL_LINUX_POWER_DEVICE_PLUGIN_SYMBOL}")
target_link_libraries(${COMPONENT_LIB} PRIVATE "-u ${BROOKESIA_HAL_LINUX_STORAGE_DEVICE_PLUGIN_SYMBOL}")
target_link_libraries(${COMPONENT_LIB} PRIVATE "-u ${BROOKESIA_HAL_LINUX_WIFI_DEVICE_PLUGIN_SYMBOL}")

add_library(brookesia::hal_linux ALIAS ${COMPONENT_LIB})
