set(COMPONENT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(COMPONENT_SRC_DIR ${COMPONENT_DIR}/src)
set(COMPONENT_INCLUDE_DIRS ${COMPONENT_DIR}/include)
set(COMPONENT_PRIVATE_INCLUDE_DIRS ${COMPONENT_SRC_DIR})

file(GLOB_RECURSE COMPONENT_SRCS_C ${COMPONENT_SRC_DIR}/*.c)
file(GLOB_RECURSE COMPONENT_SRCS_CPP ${COMPONENT_SRC_DIR}/*.cpp)

if(NOT TARGET brookesia::lib_utils)
    add_subdirectory(
        ${COMPONENT_DIR}/../../utils/brookesia_lib_utils
        ${CMAKE_BINARY_DIR}/brookesia_lib_utils
    )
endif()
if(NOT TARGET brookesia::hal_interface)
    add_subdirectory(
        ${COMPONENT_DIR}/../brookesia_hal_interface
        ${CMAKE_BINARY_DIR}/brookesia_hal_interface
    )
endif()

set(BROOKESIA_HAL_WASM_SYSTEM_DEVICE_PLUGIN_SYMBOL system_wasm_device_symbol)
set(BROOKESIA_HAL_WASM_NETWORK_DEVICE_PLUGIN_SYMBOL network_wasm_device_symbol)
set(BROOKESIA_HAL_WASM_AUDIO_DEVICE_PLUGIN_SYMBOL audio_wasm_device_symbol)
set(BROOKESIA_HAL_WASM_VIDEO_DEVICE_PLUGIN_SYMBOL video_wasm_device_symbol)
set(BROOKESIA_HAL_WASM_DISPLAY_DEVICE_PLUGIN_SYMBOL display_wasm_device_symbol)
set(BROOKESIA_HAL_WASM_POWER_DEVICE_PLUGIN_SYMBOL power_wasm_device_symbol)
set(BROOKESIA_HAL_WASM_STORAGE_DEVICE_PLUGIN_SYMBOL storage_wasm_device_symbol)
set(BROOKESIA_HAL_WASM_WIFI_DEVICE_PLUGIN_SYMBOL wifi_wasm_device_symbol)

set(COMPONENT_LIB brookesia_hal_wasm_impl)
add_library(${COMPONENT_LIB} STATIC
    ${COMPONENT_SRCS_C}
    ${COMPONENT_SRCS_CPP}
)
target_compile_features(${COMPONENT_LIB} PUBLIC cxx_std_23)
target_include_directories(${COMPONENT_LIB}
    PUBLIC
        ${COMPONENT_INCLUDE_DIRS}
    PRIVATE
        ${COMPONENT_PRIVATE_INCLUDE_DIRS}
)
target_link_libraries(${COMPONENT_LIB}
    PUBLIC
        brookesia::hal_interface
        brookesia::lib_utils
)
target_compile_definitions(${COMPONENT_LIB}
    PUBLIC
        CONFIG_BROOKESIA_HAL_WASM_ENABLE_SYSTEM_DEVICE=1
        CONFIG_BROOKESIA_HAL_WASM_ENABLE_NETWORK_DEVICE=1
        CONFIG_BROOKESIA_HAL_WASM_ENABLE_AUDIO_DEVICE=1
        CONFIG_BROOKESIA_HAL_WASM_ENABLE_VIDEO_DEVICE=1
        CONFIG_BROOKESIA_HAL_WASM_ENABLE_DISPLAY_DEVICE=1
        CONFIG_BROOKESIA_HAL_WASM_ENABLE_POWER_DEVICE=1
        CONFIG_BROOKESIA_HAL_WASM_ENABLE_STORAGE_DEVICE=1
        CONFIG_BROOKESIA_HAL_WASM_ENABLE_WIFI_DEVICE=1
        BROOKESIA_HAL_WASM_SYSTEM_DEVICE_PLUGIN_SYMBOL=${BROOKESIA_HAL_WASM_SYSTEM_DEVICE_PLUGIN_SYMBOL}
        BROOKESIA_HAL_WASM_NETWORK_DEVICE_PLUGIN_SYMBOL=${BROOKESIA_HAL_WASM_NETWORK_DEVICE_PLUGIN_SYMBOL}
        BROOKESIA_HAL_WASM_AUDIO_DEVICE_PLUGIN_SYMBOL=${BROOKESIA_HAL_WASM_AUDIO_DEVICE_PLUGIN_SYMBOL}
        BROOKESIA_HAL_WASM_VIDEO_DEVICE_PLUGIN_SYMBOL=${BROOKESIA_HAL_WASM_VIDEO_DEVICE_PLUGIN_SYMBOL}
        BROOKESIA_HAL_WASM_DISPLAY_DEVICE_PLUGIN_SYMBOL=${BROOKESIA_HAL_WASM_DISPLAY_DEVICE_PLUGIN_SYMBOL}
        BROOKESIA_HAL_WASM_POWER_DEVICE_PLUGIN_SYMBOL=${BROOKESIA_HAL_WASM_POWER_DEVICE_PLUGIN_SYMBOL}
        BROOKESIA_HAL_WASM_STORAGE_DEVICE_PLUGIN_SYMBOL=${BROOKESIA_HAL_WASM_STORAGE_DEVICE_PLUGIN_SYMBOL}
        BROOKESIA_HAL_WASM_WIFI_DEVICE_PLUGIN_SYMBOL=${BROOKESIA_HAL_WASM_WIFI_DEVICE_PLUGIN_SYMBOL}
)
target_link_libraries(${COMPONENT_LIB}
    PUBLIC
        "-u ${BROOKESIA_HAL_WASM_SYSTEM_DEVICE_PLUGIN_SYMBOL}"
        "-u ${BROOKESIA_HAL_WASM_NETWORK_DEVICE_PLUGIN_SYMBOL}"
        "-u ${BROOKESIA_HAL_WASM_AUDIO_DEVICE_PLUGIN_SYMBOL}"
        "-u ${BROOKESIA_HAL_WASM_VIDEO_DEVICE_PLUGIN_SYMBOL}"
        "-u ${BROOKESIA_HAL_WASM_DISPLAY_DEVICE_PLUGIN_SYMBOL}"
        "-u ${BROOKESIA_HAL_WASM_POWER_DEVICE_PLUGIN_SYMBOL}"
        "-u ${BROOKESIA_HAL_WASM_STORAGE_DEVICE_PLUGIN_SYMBOL}"
        "-u ${BROOKESIA_HAL_WASM_WIFI_DEVICE_PLUGIN_SYMBOL}"
)
if(EMSCRIPTEN)
    target_link_options(${COMPONENT_LIB}
        PUBLIC
            -sUSE_SDL=2
            -sFETCH=1
            -sASYNCIFY=1
            -sALLOW_MEMORY_GROWTH=1
    )
endif()

add_library(brookesia::hal_wasm ALIAS ${COMPONENT_LIB})
